--- a/index.css
+++ b/index.css
@@ -240,4 +240,24 @@ li{
         font-weight: 400;
         padding-left: 5px;
     }
+
+    .button{
+            text-align: center;
+            padding: 0;
+            font-weight: 600;
+            border-radius: 8px;
+            border: none;
+            width: 270px;
+            height: 35px;
+            color: #fff;
+            background: #19adf7;
+            transition: .5s;
+    }
+
+    .button:hover{
+            color: #19adf7;
+            transition: .5s;
+            background: #fff;
+            border: 1px solid #19adf7;
+    }
 }
